--- a/.github/workflows/upload-github-security.yml
+++ b/.github/workflows/upload-github-security.yml
@@ -3,7 +3,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: trivy
+name: upload-github-security
 
 on:
   workflow_dispatch:
