--- a/.github/workflows/json.yaml
+++ b/.github/workflows/json.yaml
@@ -16,7 +16,7 @@ jobs:
           image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
           format: 'json'
           output: 'trivy-results.json'
-          exit-code: '1'
+          #exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
