--- a/.github/workflows/scan-image-generate-json-artifact.yaml
+++ b/.github/workflows/scan-image-generate-json-artifact.yaml
@@ -1,4 +1,4 @@
-name: scan-image-output-json
+name: scan-image-generate-json-artifact
 on:
   workflow_dispatch:
 jobs:
@@ -16,7 +16,7 @@ jobs:
           image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
           format: 'json'
           output: 'trivy-results.json'
-          #exit-code: '1'
+          exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
