--- a/.github/workflows/scan-image-upload-github-security.yml
+++ b/.github/workflows/scan-image-upload-github-security.yml
@@ -3,7 +3,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: upload-github-security
+name: scan-image-upload-github-security
 
 on:
   workflow_dispatch:
